# SchemaScan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
SchemaScanConsole/: CMakeLists.txt  SchemaScanConsole.cpp
SchemaScanLib/: CMakeLists.txt  SchemaScanLib.h  Schematic.cpp  Schematic.h  SchematicHandler.cpp  SchematicHandler.h
SchemaScanLib/utils/: SchemaUtils.cpp  SchemaUtils.h
cmake/: ccache.cmake  clang-format.cmake  cmake-utils.cmake  vcpkg-init.cmake
